feat register page

--- a/backend/public/mix-manifest.json
+++ b/backend/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
     "/css/components.css": "/css/components.css",
     "/css/master.css": "/css/master.css"
 }
